Modified the codes

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css.css">
-    <title>A website developer portfolio</title>
-</head>
-<body>
-    <section class="webb">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <link rel="stylesheet" href="css.css">
+     <title>A Basic Web Page[template] </title>
+    </head>
+    <body>
 
         <div class="dev">
     <div class="nam">Johnathan Specter</div>
@@ -19,18 +17,19 @@
         <a href="#about">About </a>
 </div>
         <div class="tpc"> Get in touch</div>
+<div class="hamburger"><a href=""><img src="Hamburger Menu.svg" alt="hanmurger" /></a></div>
 </div>
 
 
 <section class="header">
     <div class="head">
         <h4>Helping companies build better, scalable software.</h4>
-        <p>Award-winnig web developer and author, with over 15+ years of working
-             experience with Fortune 500 companies like Apple, Google, facebook, and<br>more. </p>
+        <p>Award-winning web developer and author, with over 15+ years of working
+             experience with Fortune 500 companies like Apple, Google, facebook, and more. </p>
     </div>
 </section>
-<section class="logo">
-    <div class="tpg">
+<section class="tpg">
+    <div class="logo">
         <div class="logos"><img src="Walmart.svg" alt="Walmart" /> </div>
         <div class="logos"><img src="JP Morgan.svg" alt="JP Morgan" /> </div>
         <div class="logos"><img src="Visa.svg" alt="Visa"/> </div>
@@ -39,19 +38,19 @@
         <div class="logos"><img src="Verizon.svg" alt="Verison" /> </div>
     </div>
 </section>
-<section class="web">
 
+
+<section class="web">
 <div class="pics">
 <div class="sp">
 <img  class="img" src="Spense.png" alt="spense"/>
-
 <div class="fir">
 <a href="#">Spence.com </a>
 <p> Rethinking the way writers get paid, an open-source platform designed to help writers focus more on writing,
 and less on whwn and how they'll get paid. Project in collaboration with Codewell.cc</p>
 </div>
 </div>
-<div class="yp">
+<div class="sp">
 <img  class="img" src="YelpCamp.png" alt="yelpcamp"/>
 <div class="fir">
 <a href="#">YelpCamp.com</a>
@@ -60,18 +59,19 @@ over 1m MAU, YelpCamp has been the crowd's favorite in 2021.</p>
 </div>
 </div>
 </div>
-</section>
+</section> 
+
 <section> 
 <div class="words"> 
 <div class="first">
 <div class="he">
 <h2> A co-founder at one of the world's largest communities.</h2>
-<p>The combined experience i have working at the top fortune 500 companies has allowed me to be a develop a skillset
+<p>The combined experience i have working at the top Fortune 500 companies has allowed me to be a develop a skillset
  that helps me in not just development, but in every aspect of any business.</p>
 <p> I'm proud to announce that i am now working at one of the world's lagest communities teaching young minds about how to sell yourself
 as a developer and open them to a whole new world of opportunities.</p>
 </div>
-<div class="he">
+<div class="he he2">
 <p> As a developer, you have everything available to you and all that's holding you back is yourself.</p>
 <p> A quote I live by perfectly illustrates what i mean.</p>
 <p> "How big would you dream, if you <b>knew</b> you wouldn't fail?" You've already gone through the hardest parts of being a developer, it's
@@ -80,7 +80,9 @@ time to elevate your skills and become a leader in something youre passionate ab
 </div>
 </div>
 </div>
-</section>
+</section> 
+
+
 <section class="second">
 <div>
 <h2> Interested in working with me?</h2>
@@ -89,6 +91,8 @@ within 24-48 hours.</p>
  <span class="get">Get in touch</span>
 </div>
 </section>
+
+
 <section class="last">
 <div class="lastt">
 <div>
@@ -100,6 +104,6 @@ within 24-48 hours.</p>
 </div>
 </div>
 </section>
-</section> 
-</body>
-</html>
+
+</body> 
+</html> 
