updated css to make it responsive

--- a/index.html
+++ b/index.html
@@ -4,31 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <link rel="stylesheet" href="css.css">
-     <title>A Basic Web Page[template] </title>
+     <title>A web developer Portfolio </title>
     </head>
     <body>
 
-        <div class="dev">
-    <div class="nam">Johnathan Specter</div>
-<div class="links">
+<!-- First Section-->
+<section>
+  <div class="header">
+     <div class="name">Johnathan Specter</div>
+     <div class="links">
         <a href="#articles"> Articles</a>
         <a href="#chat">Chats</a>
         <a href="#awards">Awards</a>
         <a href="#about">About </a>
-</div>
-        <div class="tpc"> Get in touch</div>
-<div class="hamburger"><a href=""><img src="Hamburger Menu.svg" alt="hanmurger" /></a></div>
-</div>
+     </div>
+     <div class="touch"> Get in touch</div>
+     <div class="hamburger"><a href=""><img src="Hamburger Menu.svg" alt="hanmurger" /></a></div>
+  </div>
+</section>
+<!--End First Section-->
 
-
-<section class="header">
-    <div class="head">
+<!--Second Section-->
+<section>
+    <div class="content">
         <h4>Helping companies build better, scalable software.</h4>
         <p>Award-winning web developer and author, with over 15+ years of working
-             experience with Fortune 500 companies like Apple, Google, facebook, and more. </p>
+           experience with Fortune 500 companies like Apple, Google, facebook, and more. </p>
     </div>
-</section>
-<section class="tpg">
+</section> 
+<!--End Second Section-->
+
+<!--Third Section-->
+<section>
     <div class="logo">
         <div class="logos"><img src="Walmart.svg" alt="Walmart" /> </div>
         <div class="logos"><img src="JP Morgan.svg" alt="JP Morgan" /> </div>
@@ -38,72 +45,79 @@
         <div class="logos"><img src="Verizon.svg" alt="Verison" /> </div>
     </div>
 </section>
+<!--End Third Section-->
 
-
-<section class="web">
-<div class="pics">
-<div class="sp">
-<img  class="img" src="Spense.png" alt="spense"/>
-<div class="fir">
-<a href="#">Spence.com </a>
-<p> Rethinking the way writers get paid, an open-source platform designed to help writers focus more on writing,
-and less on whwn and how they'll get paid. Project in collaboration with Codewell.cc</p>
-</div>
-</div>
-<div class="sp">
-<img  class="img" src="YelpCamp.png" alt="yelpcamp"/>
-<div class="fir">
-<a href="#">YelpCamp.com</a>
-<p> Allowing backpack travelers to perefectly plan thier trip through an open source platform similar to TripAdvisor. With
-over 1m MAU, YelpCamp has been the crowd's favorite in 2021.</p>
-</div>
-</div>
-</div>
+<!--Fourth Section-->
+<section class="fourth">
+   <div class="pics">
+      <div class="image">
+            <img  class="img" src="Spense.png" alt="spense"/>
+          <div>
+            <a href="#">Spence.com </a>
+            <p> Rethinking the way writers get paid, an open-source platform designed to help writers focus more on writing,
+              and less on when and how they'll get paid. Project in collaboration with Codewell.cc</p>
+          </div>
+      </div>
+      <div class="image">
+            <img  class="img" src="YelpCamp.png" alt="yelpcamp"/>
+          <div>
+            <a href="#">YelpCamp.com</a>
+            <p> Allowing backpack travelers to perefectly plan thier trip through an open source platform similar to TripAdvisor. With
+              over 1m MAU, YelpCamp has been the crowd's favorite in 2021.</p>
+          </div>
+      </div>
+    </div>
 </section> 
+<!--End Fourth Section-->
 
+<!--Fifth Section-->
 <section> 
-<div class="words"> 
-<div class="first">
-<div class="he">
-<h2> A co-founder at one of the world's largest communities.</h2>
-<p>The combined experience i have working at the top Fortune 500 companies has allowed me to be a develop a skillset
- that helps me in not just development, but in every aspect of any business.</p>
-<p> I'm proud to announce that i am now working at one of the world's lagest communities teaching young minds about how to sell yourself
-as a developer and open them to a whole new world of opportunities.</p>
-</div>
-<div class="he he2">
-<p> As a developer, you have everything available to you and all that's holding you back is yourself.</p>
-<p> A quote I live by perfectly illustrates what i mean.</p>
-<p> "How big would you dream, if you <b>knew</b> you wouldn't fail?" You've already gone through the hardest parts of being a developer, it's
-time to elevate your skills and become a leader in something youre passionate about.</p>
-<p> I'm happy to chat over coffee some time about how i can help your company.</p>
-</div>
-</div>
-</div>
+   <div class="information"> 
+     <div class="first">
+       <div class="info">
+          <h2> A co-founder at one of the world's largest communities.</h2>
+          <p>The combined experience i have working at the top Fortune 500 companies has allowed me to be a develop a skillset
+            that helps me in not just development, but in every aspect of any business.</p>
+          <p> I'm proud to announce that i am now working at one of the world's lagest communities teaching young minds about how to sell yourself
+            as a developer and open them to a whole new world of opportunities.</p>
+       </div>
+       <div class="info info2">
+          <p> As a developer, you have everything available to you and all that's holding you back is yourself.</p>
+          <p> A quote I live by perfectly illustrates what i mean.</p>
+          <p> "How big would you dream, if you <b>knew</b> you wouldn't fail?" You've already gone through the hardest parts of being a developer, it's
+           time to elevate your skills and become a leader in something youre passionate about.</p>
+          <p> I'm happy to chat over coffee some time about how i can help your company.</p>
+       </div>
+     </div>
+   </div>
 </section> 
+<!--End Fifth Section-->
 
-
+<!--Sixth Section-->
 <section class="second">
-<div>
-<h2> Interested in working with me?</h2>
-<p>I'm active on all social media platforms listed below, but you can also send me an email and i will get back to you
-within 24-48 hours.</p>
- <span class="get">Get in touch</span>
-</div>
+  <div>
+    <h2> Interested in working with me?</h2>
+    <p>I'm active on all social media platforms listed below, but you can also send me an email and i will get back to you
+      within 24-48 hours.</p>
+   <span class="get">Get in touch</span>
+  </div>
 </section>
+<!--End Sixth Section-->
 
-
-<section class="last">
-<div class="lastt">
-<div>
-<p> Johnathan Specter </p></div>
-<div class="socials"> 
-<a href="#"> <img src="Twitter.svg" alt="twitter" /> </a>
-<a href="#"> <img src="LinkedIn.svg" alt="linkedin" /> </a>
-<a href="#"> <img src="Github.svg" alt="github" /> </a>
-</div>
-</div>
+<!--Seventh Section-->
+<section class="seventh">
+  <div class="footer">
+    <div>
+      <p class="name"> Johnathan Specter </p>
+    </div>
+    <div class="socials"> 
+      <a href="#"> <img src="Twitter.svg" alt="twitter" /> </a>
+      <a href="#"> <img src="LinkedIn.svg" alt="linkedin" /> </a>
+      <a href="#"> <img src="Github.svg" alt="github" /> </a>
+    </div>
+  </div>
 </section>
+<!--End Seventh Section-->
 
 </body> 
 </html> 
