--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <link rel="stylesheet" href="css.css">
+     <link rel="stylesheet" href="https://fonts.google.com/specimen/Prata" />
+     <link rel="stylesheet" href="https://fonts.google.com/specimen/Inter" />
      <title>A web developer Portfolio </title>
     </head>
     <body>
 
 <!-- First Section-->
-<section>
+
   <div class="header">
      <div class="name">Johnathan Specter</div>
      <div class="links">
@@ -19,9 +21,9 @@
         <a href="#about">About </a>
      </div>
      <div class="touch"> Get in touch</div>
-     <div class="hamburger"><a href=""><img src="Hamburger Menu.svg" alt="hanmurger" /></a></div>
+     <div class="hamburger"><a href=""><img src="Assets/Hamburger Menu.svg" alt="hanmurger" /></a></div>
   </div>
-</section>
+
 <!--End First Section-->
 
 <!--Second Section-->
@@ -37,12 +39,12 @@
 <!--Third Section-->
 <section>
     <div class="logo">
-        <div class="logos"><img src="Walmart.svg" alt="Walmart" /> </div>
-        <div class="logos"><img src="JP Morgan.svg" alt="JP Morgan" /> </div>
-        <div class="logos"><img src="Visa.svg" alt="Visa"/> </div>
-        <div class="logos"><img src="Tinder.svg" alt="Tinder" /> </div>
-        <div class="logos"><img src="Samsung.svg" alt="Samsung" /> </div>
-        <div class="logos"><img src="Verizon.svg" alt="Verison" /> </div>
+        <div class="logos"><img src="Logos/Walmart.svg" alt="Walmart" /> </div>
+        <div class="logos"><img src="Logos/JP Morgan.svg" alt="JP Morgan" /> </div>
+        <div class="logos"><img src="Logos/Visa.svg" alt="Visa"/> </div>
+        <div class="logos"><img src="Logos/Tinder.svg" alt="Tinder" /> </div>
+        <div class="logos"><img src="Logos/Samsung.svg" alt="Samsung" /> </div>
+        <div class="logos"><img src="Logos/Verizon.svg" alt="Verizon" /> </div>
     </div>
 </section>
 <!--End Third Section-->
@@ -51,7 +53,7 @@
 <section class="fourth">
    <div class="pics">
       <div class="image">
-            <img  class="img" src="Spense.png" alt="spense"/>
+            <img  class="img" src="Assets/Spense.png" alt="spense"/>
           <div>
             <a href="#">Spence.com </a>
             <p> Rethinking the way writers get paid, an open-source platform designed to help writers focus more on writing,
@@ -59,7 +61,7 @@
           </div>
       </div>
       <div class="image">
-            <img  class="img" src="YelpCamp.png" alt="yelpcamp"/>
+            <img  class="img" src="Assets/YelpCamp.png" alt="yelpcamp"/>
           <div>
             <a href="#">YelpCamp.com</a>
             <p> Allowing backpack travelers to perefectly plan thier trip through an open source platform similar to TripAdvisor. With
@@ -111,9 +113,9 @@
       <p class="name"> Johnathan Specter </p>
     </div>
     <div class="socials"> 
-      <a href="#"> <img src="Twitter.svg" alt="twitter" /> </a>
-      <a href="#"> <img src="LinkedIn.svg" alt="linkedin" /> </a>
-      <a href="#"> <img src="Github.svg" alt="github" /> </a>
+      <a href="#"> <img src="Socials/Twitter.svg" alt="twitter" /> </a>
+      <a href="#"> <img src="Socials/LinkedIn.svg" alt="linkedin" /> </a>
+      <a href="#"> <img src="Socials/Github.svg" alt="github" /> </a>
     </div>
   </div>
 </section>
