--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
      <link rel="stylesheet" href="css.css">
-     <link rel="stylesheet" href="https://fonts.google.com/specimen/Prata" />
-     <link rel="stylesheet" href="https://fonts.google.com/specimen/Inter" />
+     <link rel="stylesheet" href="https://fonts.google.com/specimen/Prata">
+     <link rel="stylesheet" href="https://fonts.google.com/specimen/Inter">
      <title>A web developer Portfolio </title>
     </head>
     <body>
